--- a/BucketWeekends.ipynb
+++ b/BucketWeekends.ipynb
@@ -2,22 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "from datetime import datetime, timedelta\n",
-    "from dateutil.parser import parse"
+    "from dateutil.parser import parse\n",
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Functions\n",
     "def is_date(string, fuzzy=False):\n",
     "    \"\"\"\n",
     "    Return whether the string can be interpreted as a date.\n",
@@ -30,57 +32,270 @@
     "        return True\n",
     "\n",
     "    except (ValueError, TypeError):\n",
-    "        return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# bucket news first\n",
-    "news_dir = Path('data/in/news/')\n",
-    "bucket_news_dir = Path('data/bucket/news/')\n",
-    "bucket_news_dir.mkdir(exist_ok=True, parents=True)\n",
-    "\n",
-    "# get file paths\n",
-    "files = list(news_dir.rglob('*.csv'))\n",
-    "for file in files:\n",
-    "    # load file\n",
-    "    df = pd.read_csv(file)\n",
+    "        return False\n",
     "    \n",
-    "    # iterate over rows\n",
-    "    for index, row in df.iterrows():\n",
-    "        date = row['Date']\n",
-    "        \n",
-    "        # drop rows with no dates\n",
-    "        if not is_date(date):\n",
-    "            df.drop(index, inplace=True)\n",
-    "            continue\n",
-    "            \n",
-    "        date_time_obj = datetime.strptime(date, '%Y-%m-%d')\n",
-    "        day_no = date_time_obj.weekday()\n",
-    "        \n",
-    "        # if weekend, subtract days to make it Friday\n",
-    "        if day_no  == 5:\n",
-    "            new_date = date_time_obj - timedelta(days=1)\n",
-    "            row['Date'] = new_date.strftime('%Y-%m-%d')\n",
-    "        elif day_no == 6:\n",
-    "            new_date = date_time_obj - timedelta(days=2)\n",
-    "            row['Date'] = new_date.strftime('%Y-%m-%d')\n",
-    "            \n",
-    "    # save new file\n",
-    "    df.to_csv(Path(bucket_news_dir, file.name), index=False)"
+    "def bucket_csvs(src_path, bucket_path):\n",
+    "    src_dir = Path(src_path)\n",
+    "    bucket_dir = Path(bucket_path)\n",
+    "    bucket_dir.mkdir(exist_ok=True, parents=True)\n",
+    "\n",
+    "    # get file paths\n",
+    "    files = list(src_dir.rglob('*.csv'))\n",
+    "    for file in files:\n",
+    "        print('Processing: {}'.format(file.name))\n",
+    "\n",
+    "        # load file\n",
+    "        df = pd.read_csv(file)\n",
+    "\n",
+    "        # iterate over rows\n",
+    "        for index, row in tqdm(df.iterrows(), total=df.shape[0], desc='Rows'):\n",
+    "            date = row['Date']\n",
+    "\n",
+    "            # drop rows with no dates\n",
+    "            if not is_date(date):\n",
+    "                df.drop(index, inplace=True)\n",
+    "                continue\n",
+    "\n",
+    "            date = date.split(' ')[0]\n",
+    "            date_time_obj = datetime.strptime(date, '%Y-%m-%d')\n",
+    "            day_no = date_time_obj.weekday()\n",
+    "\n",
+    "            # if weekend, subtract days to make it Friday\n",
+    "            if day_no  == 5:\n",
+    "                new_date = date_time_obj - timedelta(days=1)\n",
+    "                row['Date'] = new_date.strftime('%Y-%m-%d')\n",
+    "            elif day_no == 6:\n",
+    "                new_date = date_time_obj - timedelta(days=2)\n",
+    "                row['Date'] = new_date.strftime('%Y-%m-%d')\n",
+    "\n",
+    "        # save new file\n",
+    "        df.to_csv(Path(bucket_dir, file.name), index=False)\n",
+    "\n",
+    "    print('Finished bucketing: {}\\n'.format(src_path))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: Business Insider.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 8344/8344 [00:02<00:00, 3675.89it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: CNN.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rows: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 14288/14288 [00:06<00:00, 2310.86it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: CNN_sentiment.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rows: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 856/856 [00:00<00:00, 3190.66it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: New York Times.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rows: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 30257/30257 [00:08<00:00, 3423.75it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: New York Times_sentiment.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rows: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 717/717 [00:00<00:00, 3152.70it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: Washington Post.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rows: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 12051/12051 [00:04<00:00, 2913.73it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: Washington Post_sentiment.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rows: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 565/565 [00:00<00:00, 2462.92it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished bucketing: data/in/news/\n",
+      "\n",
+      "Processing: ArianaGrande.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3104/3104 [00:01<00:00, 1773.39it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: BarackObama.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2863/2863 [00:01<00:00, 2814.37it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: BarackObama_sentiment.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rows: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 696/696 [00:00<00:00, 2251.16it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: britneyspears.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2776/2776 [00:01<00:00, 2304.16it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: cnnbrk.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1842/1842 [00:00<00:00, 3286.35it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: cnnbrk_sentiment.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rows: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 185/185 [00:00<00:00, 2809.31it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: Cristiano.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2507/2507 [00:00<00:00, 2588.77it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: ddlovato.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rows:  53%|█████████████████████████████████████████████████████████████████████████████▊                                                                      | 1166/2217 [00:00<00:00, 2842.78it/s]"
+     ]
+    }
+   ],
    "source": [
-    "# bucket tweets"
+    "# Run bucketing\n",
+    "bucket_csvs('data/in/news/', 'data/bucket/news/')\n",
+    "bucket_csvs('data/in/twitter/', 'data/bucket/twitter/')"
    ]
   }
  ],
