--- a/Feature Builder.ipynb
+++ b/Feature Builder.ipynb
@@ -20,8 +20,8 @@
    },
    "outputs": [],
    "source": [
-    "twitter_dir = 'data/in/twitter/'\n",
-    "news_dir = 'data/in/news/'\n",
+    "twitter_dir = 'data/bucket/twitter/'\n",
+    "news_dir = 'data/bucket/news/'\n",
     "stock_dir = 'data/out/'\n",
     "output_dir = 'data/features/'"
    ]
@@ -230,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
