--- a/CorrelationCheck.ipynb
+++ b/CorrelationCheck.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 165,
    "metadata": {
     "collapsed": true
    },
@@ -32,12 +32,12 @@
    "source": [
     "df_twitter = pd.read_csv(feature_dir+'twitter_features.csv')\n",
     "df_news = pd.read_csv(feature_dir+'news_features.csv')\n",
-    "df_out= pd.read_csv(feature_dir+'stock_features.csv')"
+    "df_out= pd.read_csv(feature_dir+'index_features.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 166,
    "metadata": {
     "collapsed": true
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
        "KimKardashian_heuristic_score                       1.000000  "
       ]
      },
-     "execution_count": 163,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
        "Washington Post_sentiment_score                         1.000000  "
       ]
      },
-     "execution_count": 164,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,6 +621,15 @@
    "source": [
     "df2.corr()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
