--- a/Output Gen.ipynb
+++ b/Output Gen.ipynb
@@ -24,18 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "stocks = ['VIX','SPY']"
+    "stocks = ['VIX','SPY', 'AAPL', 'GOOG', 'MSFT']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -69,8 +69,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for stock in stocks:\n",
@@ -84,8 +86,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#OLD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_VIX['Lag 2 Price'] = data_VIX['Price'].shift(-2)\n",
@@ -96,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +123,7 @@
        "Name: 2 Day Significant, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +186,7 @@
        "      <td>26.68</td>\n",
        "      <td>0.069767</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -241,7 +256,7 @@
        "      <td>14.46</td>\n",
        "      <td>-0.014986</td>\n",
        "      <td>-1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5012</td>\n",
@@ -284,21 +299,21 @@
        "\n",
        "      2 Day Significant  \n",
        "0                     1  \n",
-       "1                     0  \n",
+       "1                     1  \n",
        "2                    -1  \n",
        "3                    -1  \n",
        "4                    -1  \n",
        "...                 ...  \n",
        "5009                  1  \n",
        "5010                  1  \n",
-       "5011                  0  \n",
+       "5011                 -1  \n",
        "5012                  0  \n",
        "5013                  0  \n",
        "\n",
        "[5014 rows x 7 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
